--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,37 @@
 }
 html{
     scroll-behavior: smooth;
-    FONT-FAMILY:Poppins, sans-serif;
+    Font-family:Poppins, sans-serif;
 }
 .flex{
     display: flex;
     align-items: center;
     justify-content: center;
 }
-#nav{
-    text-decoration:none;
+.navbar{
+    background-color: rgb(208, 236, 243);
+}
+.navbar ul li{
+    color:#3b2688;
+    margin: 3.1rem;
+    list-style: none;
+    margin-top:12px;
+    font-size:1.1rem;
+    font-weight:bold;
+    font-family:"Segoe UI", SegoeUI, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height:normal;
+    text-align:start;
+    letter-spacing:normal;
+}
+.navbar ul li:hover{
+    text-decoration: underline;
+    cursor:pointer;
+    text-shadow: 24px;
+    transition:2s ;
+    -webkit-transition:2s ;
+    -moz-transition:2s ;
+    -ms-transition:2s ;
+    -o-transition:2s ;
 }
 .front{
     background-color: rgb(208, 236, 243);
@@ -53,7 +75,6 @@ html{
     margin-left:5px;
     margin-top:20px;
 }
- 
 .btn {
     font-weight: 600;
     font-size: 14px;
@@ -65,12 +86,11 @@ html{
     text-transform: uppercase;
     box-shadow:#b5b9ee;
 }
-
 .btn {
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
+    color: #e0e5e9;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
@@ -80,4 +100,4 @@ html{
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     border-radius: 0.25rem;
-}  
+}
