--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1046,7 +1046,11 @@ input:-webkit-autofill {
   font-size: 2.5rem;
   padding: 0 2rem;
 }
-
+.footer i:hover{
+  transition: all 0.25s ease-in-out;
+  transform: scale(1.15);
+  color: var(--red);
+}
 .copyright {
   font-family: var(--open-sans);
   font-size: 1.6rem;
