--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 :root {
@@ -495,18 +496,41 @@ text-align:center;
  width:100%;height:auto;
  margin:100px 0;
  text-align:center;
-
 }
+
+.container-extradiv{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1.5%;
+  padding: 3% 0 3% 2%;
+}
+
+.extraDiv-icon{
+  background-color: var(--secondary-head) ;
+  padding: 5% 0;
+} 
+
+.extraDiv-icon h3,.extraDiv-icon i{
+color: #fff !important;
+}
+
+.card-des{
+  color: var(--secondary-button);
+  margin: 5% auto auto;
+}
+
 .extra-div{
-  /* background:#fff; */
-  border:medium none;
-  padding:50px !important;
-  border-radius:3px;
+  /* background:rgba(100, 100, 100, 0.2); */
+  flex: 20%;
+  border: 1px solid rgba(100, 100, 100, 0.2) ;
+  padding:3% !important;
+  border-radius:7px;
   transition:0.3s;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  -ms-border-radius:3px;
-  -o-border-radius:3px;
+  -webkit-border-radius:7px;
+  -moz-border-radius:7px;
+  -ms-border-radius:7px;
+  -o-border-radius:7px;
   -webkit-transition:0.3s;
   -moz-transition:0.3s;
   -ms-transition:0.3s;
@@ -521,6 +545,7 @@ text-align:center;
   -ms-transform:translateY(-20px);
   -o-transform:translateY(-20px);
 }
+
 .tabs {
   display: flex;
   flex-wrap: wrap;
@@ -1315,6 +1340,12 @@ input:-webkit-autofill {
   .all-works,
   .other-works {
     grid-template-columns: 1fr;
+  }
+  .container-extradiv{
+    flex-direction: column;
+    padding: 7% 3%;
+    gap: 30px;
+
   }
 }
 
