--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,6 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 :root {
@@ -28,6 +27,7 @@
 html {
   font-size: 10px;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -857,8 +857,9 @@ color: #fff !important;
 }
 
 .contact-wrapper {
-  margin-top: 3rem;
+  margin: 3rem auto 3.5rem;
   display: flex;
+  gap: 5%;
   width: 100%;
 }
 
@@ -882,7 +883,7 @@ color: #fff !important;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 .mail-id {
-  padding: 0 7.6rem;
+  padding: 0 5rem;
 }
 .phone {
   padding: 0 11.1rem;
@@ -966,21 +967,24 @@ color: #fff !important;
 .contact-form {
   display: flex;
   flex-direction: column;
+  flex:55%;
   width: 100%;
   position: relative;
 }
 
 .form-head {
   margin-bottom: 0;
+  color: var(--secondary-text);
+  font-size: 1.7rem;
 }
 
 .input {
   font-family: var(--montserrat);
   padding-left: 1.7rem;
-  color: var(--white);
+  color: white;
   font-size: 1.5rem;
   margin-top: 2.5rem;
-  height: 5.5rem;
+  height: 4.7rem;
   background-color: var(--secondary-button);
   border: none;
   border-radius: 5px;
@@ -1021,7 +1025,7 @@ input:-webkit-autofill {
 
 .submit {
   font-family: var(--montserrat);
-  margin-top: 3rem;
+  margin-top: 2.5%;
   background-color: var(--red);
   border: none;
   font-size: 1.6rem;
@@ -1042,7 +1046,15 @@ input:-webkit-autofill {
   justify-content: space-around;
   position: relative;
   z-index: 0;
-  margin-top: 7rem;
+  /* margin-top: 7rem; */
+}
+
+#footer-logo span{
+  color: var(--red);
+}
+
+#footer-logo h3{
+  font-size: 4.2rem;
 }
 
 .footer hr {
@@ -1060,8 +1072,11 @@ input:-webkit-autofill {
 .footer-icons {
   width: 40vw;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex: 45%;
+  /* align-items: center;
+  justify-content: center; */
+flex-direction: column;
+gap: 5%;
   margin: 2rem 0;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -1069,12 +1084,16 @@ input:-webkit-autofill {
 .footer-i {
   color: var(--dim-white);
   font-size: 2.5rem;
-  padding: 0 2rem;
+  padding:5%;
+  margin-right: 5%;
+  border: 1px solid var(--white);
+  border-radius: 5px;
+  transition: all 0.25s ease-in-out;
 }
 .footer i:hover{
-  transition: all 0.25s ease-in-out;
   transform: scale(1.15);
   color: var(--red);
+  border: 1px solid var(--red);
 }
 .copyright {
   font-family: var(--open-sans);
@@ -1087,7 +1106,8 @@ input:-webkit-autofill {
 
 .up-btn-wrapper {
   position: absolute;
-  top: -2.3rem;
+  /* top: -2.3rem; */
+  bottom: 6.7rem;
   height: 5rem;
   width: 5rem;
   border-radius: 50%;
@@ -1141,8 +1161,19 @@ input:-webkit-autofill {
   .about-img img {
     min-height: 570px;
   }
+  
 }
 
+@media (max-width:900px) {
+  .footer-icons{
+    width: auto;
+    text-align: center;
+    gap: 2.5rem;
+  }
+  .contact-wrapper{
+    flex-direction: column;
+  }
+}
 
 @media only screen and (max-width: 570px) {
   html {
@@ -1313,9 +1344,7 @@ input:-webkit-autofill {
   .tab {
     font-size: 2.2rem;
   }
-  .contact-wrapper {
-    flex-direction: column;
-  }
+  
   .contact-details {
     margin-top: 8rem;
     align-items: center;
