Added links for the projects section and also added a red hover for the links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,9 +406,13 @@ li {
   display: table;
   clear: both;
 }
-.column h3{
+.column h3 a{
   font-weight: bold;
   color:rgb(68, 63, 63);
+  text-decoration: none;
+}
+.column h3 a:hover{
+  color:rgb(255, 0, 55); ;
 }
 
 .serviceoffers{
